Added comments, removed warnings